--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<main>
+		<h1>Dog Adoption Form</h1>
+		<form>
+			<label for=name>Name</label>
+			<input name="name" type="text" id="name" placeholder="Name">
+			<br />
+
+			<label for="phone">Phone</label>
+			<input name="phone" type="text" id="phone" placeholder="Phone Number">
+			<br>
+			
+			<label for="address">Address</label>
+			<input name="address" type="text" id=address placeholder="Address">
+			<br>
+			
+			<input name="dogBefore" type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+			<label for="checkbox">Have you ever lived with a Dog before?</label>
+			<br>
+
+			<label for="multiSelect">Please select your preferred breeds</label><br/>
+			<select id="multiSelect" name="breeds" multiple>
+				<option value="labrador">Labrador Retriever</option>
+				<option value="goldenR">Golden Retriever</option>
+				<option value="germanS">German Shepherd</option>
+			</select>
+
+			<input id="submit" type="submit" value="Submit">
+		</form>
+	</main>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
